--- a/ui/ui_new_str.ui
+++ b/ui/ui_new_str.ui
@@ -63,23 +63,45 @@
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QLineEdit" name="txtFilterPattern">
+        <widget class="QLabel" name="label_3">
          <property name="minimumSize">
           <size>
-           <width>0</width>
+           <width>20</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Look for....</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cboFilterPattern">
+         <property name="minimumSize">
+          <size>
+           <width>60</width>
            <height>30</height>
           </size>
          </property>
-         <property name="maxLength">
-          <number>100</number>
-         </property>
-         <property name="placeholderText">
-          <string>Look for</string>
+         <property name="editable">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="label_2">
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>16777215</height>
+          </size>
+         </property>
          <property name="text">
           <string>in column:</string>
          </property>
@@ -416,8 +438,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>587</width>
-                <height>361</height>
+                <width>98</width>
+                <height>28</height>
                </rect>
               </property>
               <widget class="QGroupBox" name="groupBox_4">
@@ -625,7 +647,6 @@
  <tabstops>
   <tabstop>cboPersonFilterCols</tabstop>
   <tabstop>tvPersonInfo</tabstop>
-  <tabstop>txtFilterPattern</tabstop>
   <tabstop>txtPropID</tabstop>
   <tabstop>tvPropInfo</tabstop>
  </tabstops>
